docs: update README and disable cover page

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     window.$docsify = {
       name: '',
       repo: '',
-      coverpage: true,
-      loadNavbar: true
+      coverpage: false,
+      loadNavbar: false
     }
   </script>
   <!-- Docsify v4 -->
